# chess-engine

./: Cargo.toml  comp.txt  mine.txt  perft.sh  stockfish.txt
benches/: minimax.rs  move_gen.rs  my_benchmark.rs
bitboard/: board.rs  lib.rs  main.rs  piece.rs
chess/: Cargo.toml
chess/benches/: move_gen.rs
chess/src/: attack.rs  bitboard.rs  board.rs  chess_move.rs  internal_move.rs  lib.rs  move_generator.rs  perft.rs  piece.rs
criterion_results/perft_2/Depth 1/change/: estimates.json
criterion_results/perft_2/Depth 1/mailbox/: benchmark.json  estimates.json  sample.json  tukey.json
criterion_results/perft_2/Depth 1/new/: estimates.json  sample.json  tukey.json
criterion_results/perft_2/Depth 1/report/: index.html
criterion_results/perft_2/Depth 2/change/: estimates.json
criterion_results/perft_2/Depth 2/mailbox/: benchmark.json  estimates.json  sample.json  tukey.json
criterion_results/perft_2/Depth 2/new/: estimates.json  sample.json  tukey.json
criterion_results/perft_2/Depth 2/report/: index.html
criterion_results/perft_2/Depth 3/change/: estimates.json
criterion_results/perft_2/Depth 3/mailbox/: benchmark.json  (+3 more)
criterion_results/perft_2/report/: index.html
criterion_results/perft_3/report/: index.html
criterion_results/perft_initial/report/: index.html
criterion_results/perft_initial_grouped/report/: index.html
criterion_results/report/: index.html
rusty-rook/: Cargo.toml
rusty-rook/benches/: minimax.rs
rusty-rook/src/: score.rs
src/: attack.rs  board.rs  chess_move.rs  lib.rs  main.rs  perft.rs  piece.rs  score.rs
(+185 files in other folders)
