[package]
name = "chess"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
bench = false

[[bin]]
name = "parse"
path = "src/bin/parse.rs"
bench = false

[[bin]]
name = "perft"
path = "src/bin/perft.rs"
bench = false

[[bin]]
name = "ui"
path = "src/bin/ui.rs"
bench = false

[dependencies]
lazy_static = "1.4.0"
log = "0.4.21"
thiserror = "1.0.59"
[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "move_gen"
harness = false
