[package]
name = "rusty-rook"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
criterion = "0.5.1"
chess = { path = "../chess" }

[[bench]]
name = "minimax"
harness = false

[profile.release]
debug = true
